styles: Fix readonly form controls missing top padding on small tables

--- a/styles.scss
+++ b/styles.scss
@@ -16,6 +16,14 @@ $fa-font-path: "node_modules/@fortawesome/fontawesome-free/webfonts" !default;
   white-space: nowrap;
 }
 
+.table-sm-sm {
+  .form-control {
+    &[readonly="true"] {
+      padding-top: 0.375rem;
+    }
+  }
+}
+
 @include media-breakpoint-down(sm) {
   .table-sm-sm {
     th,
